--- a/service-2.html
+++ b/service-2.html
@@ -6,7 +6,8 @@
     <meta name="description" content="Hotex Luxury Hotel HTML5 Template" />
     <meta
       name="keywords"
-      content="agency, company, data, digital, innovation, innovative, it, modern, saas, start-up, startup" />
+      content="agency, company, data, digital, innovation, innovative, it, modern, saas, start-up, startup"
+    />
     <meta name="author" content="Hotex Luxury Hotel" />
 
     <title>Hotex Luxury Hotel HTML5 Template</title>
@@ -17,41 +18,50 @@
     <link
       rel="apple-touch-icon"
       sizes="57x57"
-      href="images/logo/apple-touch-icon-57x57.png" />
+      href="images/logo/apple-touch-icon-57x57.png"
+    />
     <link
       rel="apple-touch-icon"
       sizes="72x72"
-      href="images/logo/apple-touch-icon-72x72.png" />
+      href="images/logo/apple-touch-icon-72x72.png"
+    />
     <link
       rel="apple-touch-icon"
       sizes="76x76"
-      href="images/logo/apple-touch-icon-76x76.png" />
+      href="images/logo/apple-touch-icon-76x76.png"
+    />
     <link
       rel="apple-touch-icon"
       sizes="114x114"
-      href="images/logo/apple-touch-icon-114x114.png" />
+      href="images/logo/apple-touch-icon-114x114.png"
+    />
     <link
       rel="apple-touch-icon"
       sizes="120x120"
-      href="images/logo/apple-touch-icon-120x120.png" />
+      href="images/logo/apple-touch-icon-120x120.png"
+    />
     <link
       rel="apple-touch-icon"
       sizes="144x144"
-      href="images/logo/apple-touch-icon-144x144.png" />
+      href="images/logo/apple-touch-icon-144x144.png"
+    />
     <link
       rel="apple-touch-icon"
       sizes="152x152"
-      href="images/logo/apple-touch-icon-152x152.png" />
+      href="images/logo/apple-touch-icon-152x152.png"
+    />
     <link
       rel="apple-touch-icon"
       sizes="180x180"
-      href="images/logo/apple-touch-icon-180x180.png" />
+      href="images/logo/apple-touch-icon-180x180.png"
+    />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Gilda+Display&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap"
-      rel="stylesheet" />
+      rel="stylesheet"
+    />
 
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/fontawesome.min.css" />
@@ -72,7 +82,8 @@
     <div id="preloader">
       <div
         id="preloader-status"
-        style="background-image: url('images/icon/preeloader.gif')"></div>
+        style="background-image: url('images/icon/preeloader.gif')"
+      ></div>
     </div>
     <!-- Preloader End !-->
     <!-- Header Start !-->
@@ -265,7 +276,8 @@
     <!-- Page Header Start !-->
     <div
       class="page-breadcrumb-area page-bg"
-      style="background-image: url('images/section-bg/page-header-bg.jpg')">
+      style="background-image: url('images/section-bg/page-header-bg.jpg')"
+    >
       <div class="page-overlay"></div>
       <div class="shape">
         <img src="images/shape/slider-2.png" alt="breadcrumb-shape" />
@@ -279,9 +291,8 @@
           <div class="col-md-12">
             <div
               class="breadcrumb-wrapper py-215 my-95 mx-90"
-              style="
-                background-image: url(images/hero-section/v-2/image-1.jpg);
-              ">
+              style="background-image: url(images/hero-section/v-2/image-1.jpg)"
+            >
               <div class="breadcrumb-list">
                 <ul>
                   <li><a href="index.html">Home</a></li>
@@ -316,39 +327,8 @@
               <div class="col-lg-6">
                 <div
                   class="room-card styel-4"
-                  style="background-image: url(images/room-card/v3/img-1.jpg)">
-                  <div class="booking-btn">
-                    <a href="#">Book Now</a>
-                  </div>
-                  <div class="content-wrapper">
-                    <div class="inner-wrapper">
-                      <h3 class="title">Suprior Bed Rooms</h3>
-                      <div class="price-wrapper">
-                        <span class="price">$250</span>
-                        <span class="divider"></span>
-                        <span class="day_night">Night</span>
-                      </div>
-                      <div class="rating">
-                        <div class="desc">
-                          <i class="fa-solid fa-bed"></i>
-                          <p>2 King Bed</p>
-                        </div>
-                        <div class="stars">
-                          <i class="fa-solid fa-star"></i>
-                          <i class="fa-solid fa-star"></i>
-                          <i class="fa-solid fa-star"></i>
-                          <i class="fa-solid fa-star"></i>
-                          <i class="fa-solid fa-star"></i>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="col-lg-6">
-                <div
-                  class="room-card styel-4"
-                  style="background-image: url(images/room-card/v3/img-2.jpg)">
+                  style="background-image: url(images/room-card/v3/img-1.jpg)"
+                >
                   <div class="booking-btn">
                     <a href="#">Book Now</a>
                   </div>
@@ -380,7 +360,8 @@
               <div class="col-lg-6">
                 <div
                   class="room-card styel-4 mt-30"
-                  style="background-image: url(images/room-card/v3/img-3.jpg)">
+                  style="background-image: url(images/room-card/v3/img-2.jpg)"
+                >
                   <div class="booking-btn">
                     <a href="#">Book Now</a>
                   </div>
@@ -412,7 +393,8 @@
               <div class="col-lg-6">
                 <div
                   class="room-card styel-4 mt-30"
-                  style="background-image: url(images/room-card/v3/img-4.jpg)">
+                  style="background-image: url(images/room-card/v3/img-3.jpg)"
+                >
                   <div class="booking-btn">
                     <a href="#">Book Now</a>
                   </div>
@@ -444,7 +426,8 @@
               <div class="col-lg-6">
                 <div
                   class="room-card styel-4 mt-30"
-                  style="background-image: url(images/room-card/v3/img-5.jpg)">
+                  style="background-image: url(images/room-card/v3/img-4.jpg)"
+                >
                   <div class="booking-btn">
                     <a href="#">Book Now</a>
                   </div>
@@ -476,7 +459,41 @@
               <div class="col-lg-6">
                 <div
                   class="room-card styel-4 mt-30"
-                  style="background-image: url(images/room-card/v3/img-6.jpg)">
+                  style="background-image: url(images/room-card/v3/img-5.jpg)"
+                >
+                  <div class="booking-btn">
+                    <a href="#">Book Now</a>
+                  </div>
+                  <div class="content-wrapper">
+                    <div class="inner-wrapper">
+                      <h3 class="title">Suprior Bed Rooms</h3>
+                      <div class="price-wrapper">
+                        <span class="price">$250</span>
+                        <span class="divider"></span>
+                        <span class="day_night">Night</span>
+                      </div>
+                      <div class="rating">
+                        <div class="desc">
+                          <i class="fa-solid fa-bed"></i>
+                          <p>2 King Bed</p>
+                        </div>
+                        <div class="stars">
+                          <i class="fa-solid fa-star"></i>
+                          <i class="fa-solid fa-star"></i>
+                          <i class="fa-solid fa-star"></i>
+                          <i class="fa-solid fa-star"></i>
+                          <i class="fa-solid fa-star"></i>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="col-lg-6">
+                <div
+                  class="room-card styel-4 mt-30"
+                  style="background-image: url(images/room-card/v3/img-6.jpg)"
+                >
                   <div class="booking-btn">
                     <a href="#">Book Now</a>
                   </div>
@@ -506,7 +523,7 @@
                 </div>
               </div>
             </div>
-            <div class="basic-pagination basic-pagination-2 mt-60 mb-0">
+            <div class="basic-pagination basic-pagination-2 my-60">
               <ul>
                 <li>
                   <span aria-current="page" class="page-numbers current">
@@ -537,7 +554,8 @@
                   type="date"
                   id="check_out_date"
                   name="check_out_date"
-                  placeholder="Check out date" />
+                  placeholder="Check out date"
+                />
               </div>
               <div class="sidebar-widget date mt-30">
                 <label for="">Check out :</label>
@@ -545,7 +563,8 @@
                   type="date"
                   id="check_out_date"
                   name="check_out_date"
-                  placeholder="Check out date" />
+                  placeholder="Check out date"
+                />
               </div>
               <div class="sidebar-widget select mt-25">
                 <label for="">Choose a location :</label>
@@ -608,14 +627,16 @@
                     min="0"
                     max="1500"
                     value="0"
-                    step="50" />
+                    step="50"
+                  />
                   <input
                     type="range"
                     id="maxRange"
                     min="0"
                     max="1500"
                     value="1500"
-                    step="50" />
+                    step="50"
+                  />
                 </div>
                 <div class="price-display mt-10">
                   <span id="minPrice">0</span>
@@ -629,7 +650,8 @@
                     <input
                       type="checkbox"
                       name="features"
-                      value="lcd-television" />
+                      value="lcd-television"
+                    />
                     <span class="checkmark"></span>
                     LCD Television
                   </label>
@@ -639,7 +661,8 @@
                     <input
                       type="checkbox"
                       name="features"
-                      value="lcd-television" />
+                      value="lcd-television"
+                    />
                     <span class="checkmark"></span>
                     Garage space
                   </label>
@@ -649,7 +672,8 @@
                     <input
                       type="checkbox"
                       name="features"
-                      value="lcd-television" />
+                      value="lcd-television"
+                    />
                     <span class="checkmark"></span>
                     Hair Dryer
                   </label>
@@ -659,7 +683,8 @@
                     <input
                       type="checkbox"
                       name="features"
-                      value="lcd-television" />
+                      value="lcd-television"
+                    />
                     <span class="checkmark"></span>
                     Garage space
                   </label>
@@ -669,7 +694,8 @@
                     <input
                       type="checkbox"
                       name="features"
-                      value="lcd-television" />
+                      value="lcd-television"
+                    />
                     <span class="checkmark"></span>
                     Minibar
                   </label>
@@ -679,7 +705,8 @@
                     <input
                       type="checkbox"
                       name="features"
-                      value="lcd-television" />
+                      value="lcd-television"
+                    />
                     <span class="checkmark"></span>
                     Pet Friendly
                   </label>
@@ -689,7 +716,8 @@
                     <input
                       type="checkbox"
                       name="features"
-                      value="lcd-television" />
+                      value="lcd-television"
+                    />
                     <span class="checkmark"></span>
                     Pure air
                   </label>
@@ -699,7 +727,8 @@
                     <input
                       type="checkbox"
                       name="features"
-                      value="lcd-television" />
+                      value="lcd-television"
+                    />
                     <span class="checkmark"></span>
                     Safe Deposit Box
                   </label>
@@ -709,7 +738,8 @@
                     <input
                       type="checkbox"
                       name="features"
-                      value="lcd-television" />
+                      value="lcd-television"
+                    />
                     <span class="checkmark"></span>
                     Safety Box
                   </label>
@@ -717,7 +747,8 @@
               </div>
               <a
                 href="#"
-                class="theme-btn style-3 mt-50 text-center w-100 justify-content-center">
+                class="theme-btn style-3 mt-50 text-center w-100 justify-content-center"
+              >
                 Filter Results
               </a>
             </div>
@@ -729,7 +760,8 @@
     <!--- Start Footer !-->
     <footer
       class="footer style-2"
-      style="background-image: url('images/section-bg/footer-1.png')">
+      style="background-image: url('images/section-bg/footer-1.png')"
+    >
       <div class="overlay"></div>
       <div class="bottom-image">
         <img src="images/logo/logo-text.png" alt="footer background" />
@@ -744,7 +776,8 @@
                     <a href="index.html">
                       <img
                         src="images/logo/footer-logo.png"
-                        alt="Footer Logo" />
+                        alt="Footer Logo"
+                      />
                     </a>
                   </div>
                   <div class="footer-contact mt-90">
@@ -784,46 +817,56 @@
                   <img
                     class="icon"
                     src="images/icon/instagram.svg"
-                    alt="instagram" />
+                    alt="instagram"
+                  />
                   <img
                     src="images/instagram/instagram-1.jpg"
-                    alt="instagram photo" />
+                    alt="instagram photo"
+                  />
                 </div>
                 <div class="single-instagram-feed">
                   <img
                     class="icon"
                     src="images/icon/instagram.svg"
-                    alt="instagram" />
+                    alt="instagram"
+                  />
                   <img
                     src="images/instagram/instagram-2.jpg"
-                    alt="instagram photo" />
+                    alt="instagram photo"
+                  />
                 </div>
                 <div class="single-instagram-feed">
                   <img
                     class="icon"
                     src="images/icon/instagram.svg"
-                    alt="instagram" />
+                    alt="instagram"
+                  />
                   <img
                     src="images/instagram/instagram-3.jpg"
-                    alt="instagram photo" />
+                    alt="instagram photo"
+                  />
                 </div>
                 <div class="single-instagram-feed">
                   <img
                     class="icon"
                     src="images/icon/instagram.svg"
-                    alt="instagram" />
+                    alt="instagram"
+                  />
                   <img
                     src="images/instagram/instagram-4.jpg"
-                    alt="instagram photo" />
+                    alt="instagram photo"
+                  />
                 </div>
                 <div class="single-instagram-feed">
                   <img
                     class="icon"
                     src="images/icon/instagram.svg"
-                    alt="instagram" />
+                    alt="instagram"
+                  />
                   <img
                     src="images/instagram/instagram-5.jpg"
-                    alt="instagram photo" />
+                    alt="instagram photo"
+                  />
                 </div>
               </div>
             </div>
