--- a/service-details.html
+++ b/service-details.html
@@ -6,7 +6,8 @@
     <meta name="description" content="Hotex Luxury Hotel HTML5 Template" />
     <meta
       name="keywords"
-      content="agency, company, data, digital, innovation, innovative, it, modern, saas, start-up, startup" />
+      content="agency, company, data, digital, innovation, innovative, it, modern, saas, start-up, startup"
+    />
     <meta name="author" content="Hotex Luxury Hotel" />
 
     <title>Hotex Luxury Hotel HTML5 Template</title>
@@ -17,41 +18,50 @@
     <link
       rel="apple-touch-icon"
       sizes="57x57"
-      href="images/logo/apple-touch-icon-57x57.png" />
+      href="images/logo/apple-touch-icon-57x57.png"
+    />
     <link
       rel="apple-touch-icon"
       sizes="72x72"
-      href="images/logo/apple-touch-icon-72x72.png" />
+      href="images/logo/apple-touch-icon-72x72.png"
+    />
     <link
       rel="apple-touch-icon"
       sizes="76x76"
-      href="images/logo/apple-touch-icon-76x76.png" />
+      href="images/logo/apple-touch-icon-76x76.png"
+    />
     <link
       rel="apple-touch-icon"
       sizes="114x114"
-      href="images/logo/apple-touch-icon-114x114.png" />
+      href="images/logo/apple-touch-icon-114x114.png"
+    />
     <link
       rel="apple-touch-icon"
       sizes="120x120"
-      href="images/logo/apple-touch-icon-120x120.png" />
+      href="images/logo/apple-touch-icon-120x120.png"
+    />
     <link
       rel="apple-touch-icon"
       sizes="144x144"
-      href="images/logo/apple-touch-icon-144x144.png" />
+      href="images/logo/apple-touch-icon-144x144.png"
+    />
     <link
       rel="apple-touch-icon"
       sizes="152x152"
-      href="images/logo/apple-touch-icon-152x152.png" />
+      href="images/logo/apple-touch-icon-152x152.png"
+    />
     <link
       rel="apple-touch-icon"
       sizes="180x180"
-      href="images/logo/apple-touch-icon-180x180.png" />
+      href="images/logo/apple-touch-icon-180x180.png"
+    />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Gilda+Display&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap"
-      rel="stylesheet" />
+      rel="stylesheet"
+    />
 
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/fontawesome.min.css" />
@@ -72,7 +82,8 @@
     <div id="preloader">
       <div
         id="preloader-status"
-        style="background-image: url('images/icon/preeloader.gif')"></div>
+        style="background-image: url('images/icon/preeloader.gif')"
+      ></div>
     </div>
     <!-- Preloader End !-->
     <!-- Header Start !-->
@@ -265,7 +276,8 @@
     <!-- Page Header Start !-->
     <div
       class="page-breadcrumb-area page-bg"
-      style="background-image: url('images/section-bg/page-header-bg.jpg')">
+      style="background-image: url('images/section-bg/page-header-bg.jpg')"
+    >
       <div class="page-overlay"></div>
       <div class="shape">
         <img src="images/shape/slider-2.png" alt="breadcrumb-shape" />
@@ -279,9 +291,8 @@
           <div class="col-md-12">
             <div
               class="breadcrumb-wrapper py-215 my-95 mx-90"
-              style="
-                background-image: url(images/hero-section/v-2/image-1.jpg);
-              ">
+              style="background-image: url(images/hero-section/v-2/image-1.jpg)"
+            >
               <div class="breadcrumb-list">
                 <ul>
                   <li><a href="index.html">Home</a></li>
@@ -298,7 +309,7 @@
     </div>
     <!-- Page Header End !-->
     <!-- List page wrapper Start -->
-    <div class="list-page-wrapper details-page py-80">
+    <div class="list-page-wrapper details-page">
       <div class="container">
         <div class="row">
           <div class="col-lg-8">
@@ -307,7 +318,8 @@
                 class="room-card styel-5"
                 style="
                   background-image: url(images/room-card/service-details-1.jpg);
-                ">
+                "
+              >
                 <div class="content-wrapper">
                   <div class="inner-wrapper">
                     <h3 class="title">Suprior Bed Rooms</h3>
@@ -323,7 +335,8 @@
                 class="room-card styel-5"
                 style="
                   background-image: url(images/room-card/service-details-1.jpg);
-                ">
+                "
+              >
                 <div class="content-wrapper">
                   <div class="inner-wrapper">
                     <h3 class="title">Suprior Bed Rooms</h3>
@@ -339,7 +352,8 @@
                 class="room-card styel-5"
                 style="
                   background-image: url(images/room-card/service-details-1.jpg);
-                ">
+                "
+              >
                 <div class="content-wrapper">
                   <div class="inner-wrapper">
                     <h3 class="title">Suprior Bed Rooms</h3>
@@ -355,7 +369,8 @@
                 class="room-card styel-5"
                 style="
                   background-image: url(images/room-card/service-details-1.jpg);
-                ">
+                "
+              >
                 <div class="content-wrapper">
                   <div class="inner-wrapper">
                     <h3 class="title">Suprior Bed Rooms</h3>
@@ -380,7 +395,8 @@
                         data-bs-target="#nav-tab1_item"
                         role="tab"
                         aria-controls="nav-tab1_item"
-                        aria-selected="true">
+                        aria-selected="true"
+                      >
                         Rooms
                       </li>
                       <li
@@ -390,7 +406,8 @@
                         data-bs-target="#nav-tab2_item"
                         role="tab"
                         aria-controls="nav-tab2_item"
-                        aria-selected="false">
+                        aria-selected="false"
+                      >
                         Location
                       </li>
                       <li
@@ -400,7 +417,8 @@
                         data-bs-target="#nav-tab3_item"
                         role="tab"
                         aria-controls="nav-tab3_item"
-                        aria-selected="false">
+                        aria-selected="false"
+                      >
                         Reviews
                       </li>
                     </ul>
@@ -411,13 +429,15 @@
                 <div class="skill-progress-area">
                   <div
                     class="tab-content tab-content-wrapper"
-                    id="nav-tabContent">
+                    id="nav-tabContent"
+                  >
                     <div
                       class="tab-pane fade show active"
                       id="nav-tab1_item"
                       role="tabpanel"
                       aria-labelledby="nav-tab1"
-                      tabindex="0">
+                      tabindex="0"
+                    >
                       <div class="content-wrapper mt-50">
                         <h3 class="title">Room Details</h3>
                         <p class="desc mt-20">
@@ -532,7 +552,8 @@
                       id="nav-tab2_item"
                       role="tabpanel"
                       aria-labelledby="nav-tab2"
-                      tabindex="0">
+                      tabindex="0"
+                    >
                       <div class="mt-60">
                         <h3 class="title">Amenities</h3>
                         <div class="location mt-40">
@@ -541,7 +562,8 @@
                             style="width: 930px; height: 373px"
                             allowfullscreen=""
                             loading="lazy"
-                            referrerpolicy="no-referrer-when-downgrade"></iframe>
+                            referrerpolicy="no-referrer-when-downgrade"
+                          ></iframe>
                         </div>
                       </div>
                       <div class="mt-60">
@@ -569,7 +591,8 @@
                       id="nav-tab3_item"
                       role="tabpanel"
                       aria-labelledby="nav-tab3"
-                      tabindex="0">
+                      tabindex="0"
+                    >
                       <div class="mt-60">
                         <h3 class="title">Reviews</h3>
                         <h2 class="review-number mt-30">0.0</h2>
@@ -657,7 +680,8 @@
                                     name="comment"
                                     cols="20"
                                     rows="3"
-                                    placeholder="Comment"></textarea>
+                                    placeholder="Comment"
+                                  ></textarea>
                                 </div>
                               </div>
                               <div class="col-xl-6">
@@ -665,7 +689,8 @@
                                   <input
                                     name="author"
                                     type="text"
-                                    placeholder="Name *" />
+                                    placeholder="Name *"
+                                  />
                                 </div>
                               </div>
                               <div class="col-xl-6">
@@ -673,7 +698,8 @@
                                   <input
                                     name="email"
                                     type="text"
-                                    placeholder="Email *" />
+                                    placeholder="Email *"
+                                  />
                                 </div>
                               </div>
                               <div class="col-xl-12">
@@ -681,7 +707,8 @@
                                   <input
                                     name="website"
                                     type="text"
-                                    placeholder="Website" />
+                                    placeholder="Website"
+                                  />
                                 </div>
                               </div>
                               <div class="col-12">
@@ -711,7 +738,8 @@
                   type="date"
                   id="check_out_date"
                   name="check_out_date"
-                  placeholder="Check out date" />
+                  placeholder="Check out date"
+                />
               </div>
               <div class="sidebar-widget date mt-30">
                 <label for="">Check out :</label>
@@ -719,7 +747,8 @@
                   type="date"
                   id="check_out_date"
                   name="check_out_date"
-                  placeholder="Check out date" />
+                  placeholder="Check out date"
+                />
               </div>
               <div class="sidebar-widget select mt-25">
                 <label for="">Choose a location :</label>
@@ -782,14 +811,16 @@
                     min="0"
                     max="1500"
                     value="0"
-                    step="50" />
+                    step="50"
+                  />
                   <input
                     type="range"
                     id="maxRange"
                     min="0"
                     max="1500"
                     value="1500"
-                    step="50" />
+                    step="50"
+                  />
                 </div>
                 <div class="price-display mt-10">
                   <span id="minPrice">0</span>
@@ -803,7 +834,8 @@
                     <input
                       type="checkbox"
                       name="features"
-                      value="lcd-television" />
+                      value="lcd-television"
+                    />
                     <span class="checkmark"></span>
                     LCD Television
                   </label>
@@ -813,7 +845,8 @@
                     <input
                       type="checkbox"
                       name="features"
-                      value="lcd-television" />
+                      value="lcd-television"
+                    />
                     <span class="checkmark"></span>
                     Garage space
                   </label>
@@ -823,7 +856,8 @@
                     <input
                       type="checkbox"
                       name="features"
-                      value="lcd-television" />
+                      value="lcd-television"
+                    />
                     <span class="checkmark"></span>
                     Hair Dryer
                   </label>
@@ -833,7 +867,8 @@
                     <input
                       type="checkbox"
                       name="features"
-                      value="lcd-television" />
+                      value="lcd-television"
+                    />
                     <span class="checkmark"></span>
                     Garage space
                   </label>
@@ -843,7 +878,8 @@
                     <input
                       type="checkbox"
                       name="features"
-                      value="lcd-television" />
+                      value="lcd-television"
+                    />
                     <span class="checkmark"></span>
                     Minibar
                   </label>
@@ -853,7 +889,8 @@
                     <input
                       type="checkbox"
                       name="features"
-                      value="lcd-television" />
+                      value="lcd-television"
+                    />
                     <span class="checkmark"></span>
                     Pet Friendly
                   </label>
@@ -863,7 +900,8 @@
                     <input
                       type="checkbox"
                       name="features"
-                      value="lcd-television" />
+                      value="lcd-television"
+                    />
                     <span class="checkmark"></span>
                     Pure air
                   </label>
@@ -873,7 +911,8 @@
                     <input
                       type="checkbox"
                       name="features"
-                      value="lcd-television" />
+                      value="lcd-television"
+                    />
                     <span class="checkmark"></span>
                     Safe Deposit Box
                   </label>
@@ -883,7 +922,8 @@
                     <input
                       type="checkbox"
                       name="features"
-                      value="lcd-television" />
+                      value="lcd-television"
+                    />
                     <span class="checkmark"></span>
                     Safety Box
                   </label>
@@ -899,7 +939,8 @@
               </div>
               <a
                 href="#"
-                class="theme-btn style-3 mt-50 text-center w-100 justify-content-center">
+                class="theme-btn style-3 mt-50 text-center w-100 justify-content-center"
+              >
                 Filter Results
               </a>
             </div>
@@ -911,7 +952,8 @@
     <!--- Start Footer !-->
     <footer
       class="footer style-2"
-      style="background-image: url('images/section-bg/footer-1.png')">
+      style="background-image: url('images/section-bg/footer-1.png')"
+    >
       <div class="overlay"></div>
       <div class="bottom-image">
         <img src="images/logo/logo-text.png" alt="footer background" />
@@ -926,7 +968,8 @@
                     <a href="index.html">
                       <img
                         src="images/logo/footer-logo.png"
-                        alt="Footer Logo" />
+                        alt="Footer Logo"
+                      />
                     </a>
                   </div>
                   <div class="footer-contact mt-90">
@@ -966,46 +1009,56 @@
                   <img
                     class="icon"
                     src="images/icon/instagram.svg"
-                    alt="instagram" />
+                    alt="instagram"
+                  />
                   <img
                     src="images/instagram/instagram-1.jpg"
-                    alt="instagram photo" />
+                    alt="instagram photo"
+                  />
                 </div>
                 <div class="single-instagram-feed">
                   <img
                     class="icon"
                     src="images/icon/instagram.svg"
-                    alt="instagram" />
+                    alt="instagram"
+                  />
                   <img
                     src="images/instagram/instagram-2.jpg"
-                    alt="instagram photo" />
+                    alt="instagram photo"
+                  />
                 </div>
                 <div class="single-instagram-feed">
                   <img
                     class="icon"
                     src="images/icon/instagram.svg"
-                    alt="instagram" />
+                    alt="instagram"
+                  />
                   <img
                     src="images/instagram/instagram-3.jpg"
-                    alt="instagram photo" />
+                    alt="instagram photo"
+                  />
                 </div>
                 <div class="single-instagram-feed">
                   <img
                     class="icon"
                     src="images/icon/instagram.svg"
-                    alt="instagram" />
+                    alt="instagram"
+                  />
                   <img
                     src="images/instagram/instagram-4.jpg"
-                    alt="instagram photo" />
+                    alt="instagram photo"
+                  />
                 </div>
                 <div class="single-instagram-feed">
                   <img
                     class="icon"
                     src="images/icon/instagram.svg"
-                    alt="instagram" />
+                    alt="instagram"
+                  />
                   <img
                     src="images/instagram/instagram-5.jpg"
-                    alt="instagram photo" />
+                    alt="instagram photo"
+                  />
                 </div>
               </div>
             </div>
