--- a/service.html
+++ b/service.html
@@ -6,7 +6,8 @@
     <meta name="description" content="Hotex Luxury Hotel HTML5 Template" />
     <meta
       name="keywords"
-      content="agency, company, data, digital, innovation, innovative, it, modern, saas, start-up, startup" />
+      content="agency, company, data, digital, innovation, innovative, it, modern, saas, start-up, startup"
+    />
     <meta name="author" content="Hotex Luxury Hotel" />
 
     <title>Hotex Luxury Hotel HTML5 Template</title>
@@ -17,41 +18,50 @@
     <link
       rel="apple-touch-icon"
       sizes="57x57"
-      href="images/logo/apple-touch-icon-57x57.png" />
+      href="images/logo/apple-touch-icon-57x57.png"
+    />
     <link
       rel="apple-touch-icon"
       sizes="72x72"
-      href="images/logo/apple-touch-icon-72x72.png" />
+      href="images/logo/apple-touch-icon-72x72.png"
+    />
     <link
       rel="apple-touch-icon"
       sizes="76x76"
-      href="images/logo/apple-touch-icon-76x76.png" />
+      href="images/logo/apple-touch-icon-76x76.png"
+    />
     <link
       rel="apple-touch-icon"
       sizes="114x114"
-      href="images/logo/apple-touch-icon-114x114.png" />
+      href="images/logo/apple-touch-icon-114x114.png"
+    />
     <link
       rel="apple-touch-icon"
       sizes="120x120"
-      href="images/logo/apple-touch-icon-120x120.png" />
+      href="images/logo/apple-touch-icon-120x120.png"
+    />
     <link
       rel="apple-touch-icon"
       sizes="144x144"
-      href="images/logo/apple-touch-icon-144x144.png" />
+      href="images/logo/apple-touch-icon-144x144.png"
+    />
     <link
       rel="apple-touch-icon"
       sizes="152x152"
-      href="images/logo/apple-touch-icon-152x152.png" />
+      href="images/logo/apple-touch-icon-152x152.png"
+    />
     <link
       rel="apple-touch-icon"
       sizes="180x180"
-      href="images/logo/apple-touch-icon-180x180.png" />
+      href="images/logo/apple-touch-icon-180x180.png"
+    />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Gilda+Display&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap"
-      rel="stylesheet" />
+      rel="stylesheet"
+    />
 
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/fontawesome.min.css" />
@@ -72,7 +82,8 @@
     <div id="preloader">
       <div
         id="preloader-status"
-        style="background-image: url('images/icon/preeloader.gif')"></div>
+        style="background-image: url('images/icon/preeloader.gif')"
+      ></div>
     </div>
     <!-- Preloader End !-->
     <!-- Header Start !-->
@@ -265,7 +276,8 @@
     <!-- Page Header Start !-->
     <div
       class="page-breadcrumb-area page-bg"
-      style="background-image: url('images/section-bg/page-header-bg.jpg')">
+      style="background-image: url('images/section-bg/page-header-bg.jpg')"
+    >
       <div class="page-overlay"></div>
       <div class="shape">
         <img src="images/shape/slider-2.png" alt="breadcrumb-shape" />
@@ -279,9 +291,8 @@
           <div class="col-md-12">
             <div
               class="breadcrumb-wrapper py-215 my-95 mx-90"
-              style="
-                background-image: url(images/hero-section/v-2/image-1.jpg);
-              ">
+              style="background-image: url(images/hero-section/v-2/image-1.jpg)"
+            >
               <div class="breadcrumb-list">
                 <ul>
                   <li><a href="index.html">Home</a></li>
@@ -435,7 +446,8 @@
                   type="date"
                   id="check_out_date"
                   name="check_out_date"
-                  placeholder="Check out date" />
+                  placeholder="Check out date"
+                />
               </div>
               <div class="sidebar-widget date mt-30">
                 <label for="">Check out :</label>
@@ -443,7 +455,8 @@
                   type="date"
                   id="check_out_date"
                   name="check_out_date"
-                  placeholder="Check out date" />
+                  placeholder="Check out date"
+                />
               </div>
               <div class="sidebar-widget select mt-25">
                 <label for="">Choose a location :</label>
@@ -506,14 +519,16 @@
                     min="0"
                     max="1500"
                     value="0"
-                    step="50" />
+                    step="50"
+                  />
                   <input
                     type="range"
                     id="maxRange"
                     min="0"
                     max="1500"
                     value="1500"
-                    step="50" />
+                    step="50"
+                  />
                 </div>
                 <div class="price-display mt-10">
                   <span id="minPrice">0</span>
@@ -527,7 +542,8 @@
                     <input
                       type="checkbox"
                       name="features"
-                      value="lcd-television" />
+                      value="lcd-television"
+                    />
                     <span class="checkmark"></span>
                     LCD Television
                   </label>
@@ -537,7 +553,8 @@
                     <input
                       type="checkbox"
                       name="features"
-                      value="lcd-television" />
+                      value="lcd-television"
+                    />
                     <span class="checkmark"></span>
                     Garage space
                   </label>
@@ -547,7 +564,8 @@
                     <input
                       type="checkbox"
                       name="features"
-                      value="lcd-television" />
+                      value="lcd-television"
+                    />
                     <span class="checkmark"></span>
                     Hair Dryer
                   </label>
@@ -557,7 +575,8 @@
                     <input
                       type="checkbox"
                       name="features"
-                      value="lcd-television" />
+                      value="lcd-television"
+                    />
                     <span class="checkmark"></span>
                     Garage space
                   </label>
@@ -567,7 +586,8 @@
                     <input
                       type="checkbox"
                       name="features"
-                      value="lcd-television" />
+                      value="lcd-television"
+                    />
                     <span class="checkmark"></span>
                     Minibar
                   </label>
@@ -577,7 +597,8 @@
                     <input
                       type="checkbox"
                       name="features"
-                      value="lcd-television" />
+                      value="lcd-television"
+                    />
                     <span class="checkmark"></span>
                     Pet Friendly
                   </label>
@@ -587,7 +608,8 @@
                     <input
                       type="checkbox"
                       name="features"
-                      value="lcd-television" />
+                      value="lcd-television"
+                    />
                     <span class="checkmark"></span>
                     Pure air
                   </label>
@@ -597,7 +619,8 @@
                     <input
                       type="checkbox"
                       name="features"
-                      value="lcd-television" />
+                      value="lcd-television"
+                    />
                     <span class="checkmark"></span>
                     Safe Deposit Box
                   </label>
@@ -607,7 +630,8 @@
                     <input
                       type="checkbox"
                       name="features"
-                      value="lcd-television" />
+                      value="lcd-television"
+                    />
                     <span class="checkmark"></span>
                     Safety Box
                   </label>
@@ -615,7 +639,8 @@
               </div>
               <a
                 href="#"
-                class="theme-btn style-3 mt-50 text-center w-100 justify-content-center">
+                class="theme-btn style-3 mt-50 text-center w-100 justify-content-center"
+              >
                 Filter Results
               </a>
             </div>
@@ -627,7 +652,8 @@
     <!--- Start Footer !-->
     <footer
       class="footer style-2"
-      style="background-image: url('images/section-bg/footer-1.png')">
+      style="background-image: url('images/section-bg/footer-1.png')"
+    >
       <div class="overlay"></div>
       <div class="bottom-image">
         <img src="images/logo/logo-text.png" alt="footer background" />
@@ -642,7 +668,8 @@
                     <a href="index.html">
                       <img
                         src="images/logo/footer-logo.png"
-                        alt="Footer Logo" />
+                        alt="Footer Logo"
+                      />
                     </a>
                   </div>
                   <div class="footer-contact mt-90">
@@ -682,46 +709,56 @@
                   <img
                     class="icon"
                     src="images/icon/instagram.svg"
-                    alt="instagram" />
+                    alt="instagram"
+                  />
                   <img
                     src="images/instagram/instagram-1.jpg"
-                    alt="instagram photo" />
+                    alt="instagram photo"
+                  />
                 </div>
                 <div class="single-instagram-feed">
                   <img
                     class="icon"
                     src="images/icon/instagram.svg"
-                    alt="instagram" />
+                    alt="instagram"
+                  />
                   <img
                     src="images/instagram/instagram-2.jpg"
-                    alt="instagram photo" />
+                    alt="instagram photo"
+                  />
                 </div>
                 <div class="single-instagram-feed">
                   <img
                     class="icon"
                     src="images/icon/instagram.svg"
-                    alt="instagram" />
+                    alt="instagram"
+                  />
                   <img
                     src="images/instagram/instagram-3.jpg"
-                    alt="instagram photo" />
+                    alt="instagram photo"
+                  />
                 </div>
                 <div class="single-instagram-feed">
                   <img
                     class="icon"
                     src="images/icon/instagram.svg"
-                    alt="instagram" />
+                    alt="instagram"
+                  />
                   <img
                     src="images/instagram/instagram-4.jpg"
-                    alt="instagram photo" />
+                    alt="instagram photo"
+                  />
                 </div>
                 <div class="single-instagram-feed">
                   <img
                     class="icon"
                     src="images/icon/instagram.svg"
-                    alt="instagram" />
+                    alt="instagram"
+                  />
                   <img
                     src="images/instagram/instagram-5.jpg"
-                    alt="instagram photo" />
+                    alt="instagram photo"
+                  />
                 </div>
               </div>
             </div>
